<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">HikeFinder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="nw">NEW</string>
    <string name="profileCaps">PROFILE</string>
    <string name="location">Location</string>
    <string name="ocean_view">Ocean View</string>
    <string name="waterfall">Waterfall</string>
	<string name="dog_friendly">Dog Friendly</string>
	<string name="historical">Historical</string>
	<string name="geological">Geological</string>
	<string name="bikes_allowed">Bikes Allowed</string>
	<string name="title1">Select the Features for Your Hike:</string>
	<string name="zip">95060</string>
	<string name="yes">yes</string>
    <string name="distance">Distance</string>
    <string name="elevation">Elevation</string>
    <string name="submit">SUBMIT</string>
    <string name="miles">miles</string>
    <string name="feet">feet</string>
    <string name="route">Hike Route</string>
    <string name="view_checklist">View Checklist</string>
    <string name="view_map">View Map</string>
    <string name="completed">Completed? Rate this Hike</string>
    <string name="sample_route">Hibiscus Trail->\nRocky Ridge Trail->\nFisher Bluffs Trail->\nMayday Trail->\nHibiscus Trail</string>
    <string name="LOMB">Land of Medicine Buddha</string>
    <string name="sample_description">Land of Medicine Buddha, a Buddhist retreat center located just south of Santa Cruz in Soquel, CA! This is a supremely beautiful and peaceful area with lovely hiking trails through the redwoods. </string>
	<string name="features_present">Features Present</string>
	<string name="download_map">Download Map</string>
	<string name="description">Description</string>
	<string name="select_hike">Select Hike</string>
	<string name="sample_features">Dog-Friendly, Historical\n6 miles, 1500 foot elevation gain</string>
	<string name="map_button">Map Button</string>
  
    <string name="profile">Profile</string>

    <string name="results">Results</string>
    <string name="home">Home</string>
    <string name="retrn">Return</string>
    <string name="prof1">Hikes Completed  ................ 5</string>
    <string name="prof1_1">Hike One</string>
    <string name="prof1_2">Hike Two</string>
    <string name="prof1_3">Hike Three</string> 
    <string name="prof2">Total Miles  .......................... 58</string>
    <string name="prof3">Calories Burned  .................. 31,043</string>
    	
    <string name="checklist_checklist">Checklist</string>
    <string name="checklist_water">Water</string>
    <string name="checklist_flashlight">Flashlight</string>
	<string name="checklist_money">Money</string>
	<string name="checklist_food">Small Snack</string>
	<string name="checklist_aid">First Aid Kit</string>
	<string name="checklist_warnings">Warnings:</string>
	<string name="checklist_sunset">Sunset is at: </string>
	<string name="checklist_sunset_time">7:33 pm</string>
	<string name="checklist_back">Back</string>
	<string name="checklist_personalitems">Personal Items</string>
	<string name="checklist_personalitems_list">pocket knife</string>
	
    <string name="completed_completed">Completed</string>
	<string name="completed_rate">Rate this hike</string>
    <string name="completed_review">Write a review</string>
	<string name="completed_sample_review">I liked this hike. All the features I wanted were present, and the hike took as long as expected.</string>
    <string name="completed_notes">Write some notes</string>
	<string name="completed_sample_notes">Had to pay for parking.</string>
	<string name="completed_save">Save</string>

</resources>
