<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFawn"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Route" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/route"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="36dp"
        android:maxLines="10"
        android:text="@string/sample_route"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button3"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:background="@color/colorAsparagus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_width="fill_parent"
        android:text="@string/completed" />

    <Button
        android:id="@+id/button2"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignTop="@+id/button1"
        android:background="@color/colorAsparagus"
        android:layout_marginTop="60dp"
        android:layout_width="fill_parent"
        android:text="@string/view_map" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="59dp"
        android:background="@color/colorAsparagus"
        android:text="@string/view_checklist" />

</RelativeLayout>